crear editar evento

--- a/app/src/main/res/layout/activity_crear_evento.xml
+++ b/app/src/main/res/layout/activity_crear_evento.xml
@@ -40,16 +40,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_below="@+id/imagenEvento"
                 android:layout_alignParentStart="true"
-                android:layout_height="740dp" />
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:id="@+id/imagenEvento"
-                android:layout_height="160dp"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentStart="true"
-                android:onClick="abrirGaleria"
-                android:focusable="false" />
+                android:layout_height="1455dp" />
 
             <EditText
                 android:layout_width="match_parent"
@@ -73,7 +64,7 @@
 
             <EditText
                 android:layout_width="match_parent"
-                android:inputType="textPersonName"
+                android:inputType="textMultiLine"
                 android:hint="@string/ESCRIBE_DESCRIPCION_EVENTO"
                 android:ems="10"
                 android:fontFamily="sans-serif"
@@ -156,7 +147,7 @@
 
             <EditText
                 android:layout_width="match_parent"
-                android:inputType="textPersonName"
+                android:inputType="textMultiLine"
                 android:hint="@string/ESCRIBE_URL_ENTRADAS"
                 android:ems="10"
                 android:fontFamily="sans-serif"
@@ -199,7 +190,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:id="@+id/textView" />
             <!-- .............. GOOGLE PLACES API ....... -->
             <ListView android:id="@+id/listView1"
                 android:layout_width="match_parent"
@@ -241,29 +233,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:inputType="textPersonName"
-                android:hint="@string/ULTIMO_DIA"
-                android:ems="10"
-                android:cursorVisible="false"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
-                android:fontFamily="sans-serif"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                android:textSize="18sp"
-                android:textColorHint="#8a939d"
-                android:id="@+id/editorFechaFinal"
-                android:layout_height="46dp"
-                android:background="#eceff1"
-                android:textStyle="normal"
-                android:layout_marginTop="10dp"
-                android:layout_below="@+id/editorFecha"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp" />
-
-            <EditText
-                android:layout_width="match_parent"
-                android:inputType="textPersonName"
-                android:hint="Hora del evento (hh:mm)"
+                android:hint="Hora del evento (hh.mm)"
                 android:ems="10"
                 android:fontFamily="sans-serif"
                 android:paddingLeft="5dp"
@@ -271,7 +241,7 @@
                 android:textSize="18sp"
                 android:textColorHint="#8a939d"
                 android:id="@+id/hora"
-                android:layout_below="@+id/editorFechaFinal"
+                android:layout_below="@+id/calendarViewFinal"
                 android:layout_height="46dp"
                 android:layout_marginTop="10dp"
                 android:background="#eceff1"
@@ -293,24 +263,58 @@
                 android:layout_marginBottom="15dp"
                 android:layout_marginTop="20dp" />
 
+            <ImageView
+                android:layout_width="match_parent"
+                android:id="@+id/imagenEvento"
+                android:layout_height="160dp"
+                android:onClick="abrirGaleria"
+                android:focusable="false"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true" />
+
             <CalendarView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/calendarView"
-                android:layout_alignParentBottom="true"
-                android:background="#FFF"
-                android:layout_alignStart="@+id/marcoContenido"
-                android:layout_below="@+id/marcoContenido"
-                android:layout_alignEnd="@+id/marcoContenido" />
+                android:background="#eceff1"
+                android:layout_marginTop="16dp"
+                android:layout_below="@+id/listView1"
+                android:layout_alignStart="@+id/editorFechaFinal"
+                android:layout_alignEnd="@+id/editorFechaFinal"
+                android:layout_marginBottom="10dp"/>
 
             <CalendarView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/calendarViewFinal"
-                android:layout_alignParentBottom="true"
-                android:layout_alignStart="@+id/marcoContenido"
-                android:layout_below="@+id/marcoContenido"
-                android:layout_alignEnd="@+id/marcoContenido" />
+                android:background="#eceff1"
+                android:layout_marginTop="16dp"
+                android:layout_below="@+id/editorFechaFinal"
+                android:layout_alignStart="@+id/hora"
+                android:layout_alignEnd="@+id/hora"
+                android:layout_marginBottom="10dp"/>
+
+            <EditText
+                android:layout_width="match_parent"
+                android:inputType="textPersonName"
+                android:hint="@string/ULTIMO_DIA"
+                android:ems="10"
+                android:cursorVisible="true"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:fontFamily="sans-serif"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:textSize="18sp"
+                android:textColorHint="#8a939d"
+                android:id="@+id/editorFechaFinal"
+                android:layout_height="46dp"
+                android:background="#eceff1"
+                android:textStyle="normal"
+                android:layout_marginTop="10dp"
+                android:layout_below="@+id/calendarView"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp" />
 
         </RelativeLayout>
     </ScrollView>
