--- a/app/src/main/res/layout/activity_busqueda.xml
+++ b/app/src/main/res/layout/activity_busqueda.xml
@@ -25,8 +25,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
             android:orientation="vertical"
             tools:context="com.pes12.pickanevent.view.MainActivity"
@@ -37,14 +35,24 @@
                     android:id="@+id/inputBusqueda"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
+                    android:textStyle="normal|bold"
+                    android:textColor="#000"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="16dp"
+                    android:background="@drawable/barra_busqueda"
+                    android:padding="12dip"
                     />
 
 
             <TextView
                 android:id="@+id/texto"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textStyle="normal|bold"
+                android:textColor="#000"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"/>
 
             <ListView
                 android:id="@+id/lvUsers"
@@ -55,7 +63,12 @@
             <TextView
                 android:id="@+id/texto2"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textStyle="normal|bold"
+                android:textColor="#000"
+                android:layout_marginRight="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="16dp" />
 
             <ListView
                 android:id="@+id/lvGrupos"
