--- a/app/src/main/res/layout/activity_crear_usuario.xml
+++ b/app/src/main/res/layout/activity_crear_usuario.xml
@@ -85,7 +85,7 @@
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/DEFAULT_CREAR_USUARIO"
-                        android:onClick="crearUsuario (CrearUsuarioActivity)"/>
+                        android:onClick="crearUsuario"/>
 
 
 
