--- a/app/src/main/res/layout/activity_perfil_usuario.xml
+++ b/app/src/main/res/layout/activity_perfil_usuario.xml
@@ -130,6 +130,13 @@
                 android:id="@+id/button6" />
 
             <Button
+                android:text="@string/ELIMINAR_CUENTA"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/holo_red_dark"
+                android:id="@+id/borrarCuenta" />
+
+            <Button
                 android:id="@+id/twitter_logout_button"
                 android:text="Log out from Twitter"
                 android:layout_marginTop="5dp"
