--- a/app/src/main/res/layout/activity_ver_info_evento.xml
+++ b/app/src/main/res/layout/activity_ver_info_evento.xml
@@ -308,7 +308,17 @@
                 android:layout_above="@+id/layoutDescripcion"
                 android:layout_centerHorizontal="true" />
 
+            <Button
+                android:text="@string/ELIMINAR_EVENTO"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/holo_red_dark"
+                android:id="@+id/borrarEvento" />
+
+
         </RelativeLayout>
+
+
 
     </ScrollView>
 
