--- a/app/src/main/res/layout/activity_ver_info_grupo.xml
+++ b/app/src/main/res/layout/activity_ver_info_grupo.xml
@@ -162,6 +162,13 @@
                 android:layout_marginTop="11dp"
                 android:onClick="editarTags" />
 
+            <Button
+                android:text="@string/ELIMINAR_GRUPO"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/holo_red_dark"
+                android:id="@+id/borrarGrupo" />
+
 
         </RelativeLayout>
     </ScrollView>
