--- a/app/src/main/res/layout/dialog_borrar_usuario.xml
+++ b/app/src/main/res/layout/dialog_borrar_usuario.xml
@@ -26,7 +26,7 @@
 
     <RelativeLayout
         android:id="@+id/relativeLayout1"
-        android:layout_width="334dp"
+        android:layout_width="wrap_content"
         android:paddingTop="10dp"
         android:gravity="center_vertical|center_horizontal|center"
         android:layout_height="wrap_content">
