--- a/app/src/main/res/layout/activity_ver_info_grupo.xml
+++ b/app/src/main/res/layout/activity_ver_info_grupo.xml
@@ -166,7 +166,19 @@
                 android:layout_height="26dp"
                 android:onClick="editarTags"
                 android:layout_below="@+id/borrarGrupo"
-                android:layout_alignParentEnd="true" />
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="5dp" />
+
+            <Button
+                android:text="editar"
+                android:id="@+id/editar"
+                android:background="@drawable/boton_amarillo_custom"
+                android:layout_height="26dp"
+                android:onClick="editar"
+                android:layout_width="80dp"
+                android:layout_below="@+id/borrarGrupo"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="5dp" />
 
 
         </RelativeLayout>
